KabbaManga/www/css/style.css
#detail_image {
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: 25%;
  width: 50%;
}

#detail_description {
  text-indent: 5%;
}

#status_completed {
  text-align: center;
  color: green;
}

#status_ongoing {
  text-align: center;
  color:orange;
}

#chapter_selection {
  text-align: center;
}

#page_view {

  height:95%;
  width: 95%;

  -webkit-background-size: contain;
  -moz-background-size: contain;
  -o-background-size: contain;
  background-size: contain;
}

#searchBar {
  margin:44px;
  height:5%;
  width:100%;
}

